fixed navbar visibility

--- a/service.css
+++ b/service.css
@@ -69,18 +69,19 @@ nav {
 }
 .services {
     max-width: 1200px;
-    margin-top: 50px;
+    margin-top: 60px;
+    color: white;
     text-align: center;
-    
+    font-family: "Ubuntu", sans-serif;
     background-image: linear-gradient( 179.6deg,  rgb(0, 14, 19) -4.9%, rgba(0,77,105,1) 108.4% );
 }
 
-h2 {
-    font-family: "Ubuntu", sans-serif;
+/* h2 {
+    font-family: "Margarine", sans-serif;
     color: rgb(211, 210, 210);
     font-size: 2.5em;
     margin-bottom: 10px;
-}
+} */
 
 p {
     font-family: "Ubuntu", sans-serif;
@@ -145,6 +146,16 @@ p {
     .container{
         height: 100vh;
     }
+    nav{
+        background-color: rgb(0, 19, 26);
+        margin: 0;
+        padding: 0;
+        height: 55px;
+    }
+    .logo{
+        margin: 5px;
+        padding: 5px;
+    }
     .nav-links {
         display: none;
         flex-direction: column;
@@ -154,7 +165,7 @@ p {
         height: 100vh;
         left: 0;
         margin-right: 20px;
-        /* background-image: linear-gradient( 179.6deg,  rgba(0, 14, 19, 0.276) -4.9%, rgba(0, 77, 105, 0.253) 108.4% ); */
+        background-image: linear-gradient( 179.6deg,  rgba(0, 14, 19, 0.276));
         backdrop-filter: blur(15px);
         font-family: "Ubuntu", sans-serif;
     }
